Login and register workflow complete

--- a/client/views/register.html
+++ b/client/views/register.html
@@ -8,7 +8,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td>Email{{ email }}</td>
+			<td>Email</td>
 			<td>
 				<input type="email" maxlength="198" placeholder="Enter your email address" ng-model="email" />
 			</td>
